# manipik

./: README.md
iiwa/: .gitignore  CMakeLists.txt  README.md  build_cpp.py  iiwa_fk.py  iiwa_ik.cpp  iiwa_ik.hpp  iiwa_ik.py  iiwa_ik_example.cpp  ik_benchmark.py
iiwa/examples/: 01_solve_all.py  02_pick_a_solution.py  03_fk_roundtrip.py
